# tg-user-service

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
user_api/: config.py  server.py
user_api/dao/: user_dao.py
user_api/database/: db.py  helpers.py
user_api/database/models/: user.py
user_api/helpers/: db_helpers.py  rest_helpers.py  shutdown.py  startup.py
user_api/routes/: __init__.py  user.py
user_api/services/: user_service.py
user_api/utils/: logger.py
user_api/views/: user.py
